--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Run Buddy 🏃</h1>
-        What We Do
+        What We Do What Do Your Trainers Reach Out
     </body>
 
     </html>
