--- a/index.html
+++ b/index.html
@@ -216,6 +216,35 @@
 
         <h2>Reach Out</h2>
 
+        <div class="contact-info">
+
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2353.416263732341!2d-122.78093248378974!3d53.85324558008846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53889c19306d32b5%3A0xc42d99be4bc1d07f!2s7657%20Southridge%20Ave%2C%20Prince%20George%2C%20BC%20V2N%206S4!5e0!3m2!1sen!2sca!4v1651675788778!5m2!1sen!2sca"
+                width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy">
+
+            </iframe>
+
+            <div>
+                <h3>Run Buddy</h3>
+
+                <p>
+                    Any questions or concerns before signing up?
+                    <br />
+                    Let us know and we'll be happy to talk to you!
+                </p>
+
+                <address>
+
+                    55 Main Street <br />
+                    Some Town, Ca <br />
+                    12345<br />
+                    P: 555.RUN.BUDZ (555.786.2839)<br />
+                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+
+                </address>
+
+            </div>
+
     </section>
 
     <!-- footer -->
