--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
 
         <nav>
             <!-- Unordered list element -->
+
             <ul>
                 <!-- List item element-->
+
                 <li>
                     <!-- Anchor element -->
+
                     <a href="#what-we-do">What We Do</a>
                 </li>
 
@@ -114,6 +117,7 @@
 
         <div>
             <!-- insert this img element -->
+
             <img src="assets/images/01-04-svgs/step-1.svg" alt="" />
             <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
             <p>You're already here, so why not?</p>
@@ -148,6 +152,7 @@
             Meet The Trainers
         </h2>
         <!-- first trainer bio-->
+
         <article class="trainer">
             <img src="assets/images/01-05-trainers/trainer-1.jpg"
                 alt="Arron Stephens in his workout clothes, ready to pump iron" />
@@ -168,6 +173,7 @@
         </article>
 
         <!-- second trainer bio -->
+
         <article class="trainer">
 
             <div class="trainer-bio text-right">
@@ -188,6 +194,7 @@
         </article>
 
         <!-- third trainer bio -->
+
         <article class="trainer">
 
             <img src="assets/images/01-05-trainers/trainer-3.jpg"
@@ -212,15 +219,15 @@
 
     <!-- "reach out" section-->
 
-    <section>
+    <section id="reach-out" class="contact">
 
-        <h2>Reach Out</h2>
+        <h2 class="section-title secondary-border">Reach Out</h2>
 
         <div class="contact-info">
 
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2353.416263732341!2d-122.78093248378974!3d53.85324558008846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53889c19306d32b5%3A0xc42d99be4bc1d07f!2s7657%20Southridge%20Ave%2C%20Prince%20George%2C%20BC%20V2N%206S4!5e0!3m2!1sen!2sca!4v1651675788778!5m2!1sen!2sca"
-                width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy">
+                style="border:0;" allowfullscreen="" loading="lazy">
 
             </iframe>
 
