--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Run Buddy</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
@@ -12,6 +12,7 @@
     <!-- navigation -->
 
     <header>
+
         <h1>
             <a href="/">RUN BUDDY</a>
         </h1>
@@ -39,8 +40,11 @@
                 <li>
                     <a href="#reach-out">Reach Out</a>
                 </li>
+
             </ul>
+
         </nav>
+
     </header>
 
     <!-- hero/jumbotron -->
@@ -212,7 +216,9 @@
                     itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis
                     repellat!
                 </p>
+
             </div>
+
         </article>
 
     </section>
@@ -259,7 +265,7 @@
     <footer>
         <h2>❤️ Made with love by Run Buddy</h2>
         <div>
-            <a href="#">Read Our Privacy Policy</a><br />
+            <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
             &copy; 2019 Run Buddy, Inc.
         </div>
     </footer>
